# Plank-Config

./: .fuse_hidden000090500000000f  .gitignore  CREDITS  Makefile.am  PlankSettings.vala  README.md  app  autogen.sh  configure.ac  plank-config  plank-config.desktop.in  plank-config.vala
po/: POTFILES.in
